libglx.so is an Xorg module and therefore not multiarch ...
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/275.xx@2193 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/xserver-xorg-video-nvidia.links.in
+++ b/debian/xserver-xorg-video-nvidia.links.in
@@ -1,1 +1,1 @@
-#LIBDIR#/#PRIVATE#/libglx.so.#VERSION#	#LIBDIR#/#PRIVATE#/libglx.so
+usr/lib/#PRIVATE#/libglx.so.#VERSION#	usr/lib/#PRIVATE#/libglx.so
