install from the flat layout
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/275.xx@2199 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/libgl1-nvidia-glx.install.in
+++ b/debian/libgl1-nvidia-glx.install.in
@@ -1,6 +1,6 @@
-usr/lib/libGL.so.#VERSION#			#LIBDIR#/#PRIVATE#/
-libnvidia-glcore.so.#VERSION#			#LIBDIR#/
-usr/lib/libnvidia-cfg.so.#VERSION#		#LIBDIR#/#PRIVATE#/
-usr/lib/libnvidia-tls.so.#VERSION#		#LIBDIR#/
-usr/lib/tls/libnvidia-tls.so.#VERSION#		#LIBDIR#/tls/
-usr/X11R6/lib/libXvMCNVIDIA.so.#VERSION#	#LIBDIR#/#PRIVATE#/
+libGL.so.#VERSION#		#LIBDIR#/#PRIVATE#/
+libnvidia-glcore.so.#VERSION#	#LIBDIR#/
+libnvidia-cfg.so.#VERSION#	#LIBDIR#/#PRIVATE#/
+libnvidia-tls.so.#VERSION#	#LIBDIR#/
+tls/libnvidia-tls.so.#VERSION#	#LIBDIR#/tls/
+libXvMCNVIDIA.so.#VERSION#	#LIBDIR#/#PRIVATE#/
