--- a/debian/libgl1-nvidia-glx-ia32.install.in
+++ b/debian/libgl1-nvidia-glx-ia32.install.in
@@ -1,4 +1,4 @@
-usr/lib32/libGL.so.#VERSION#			usr/lib32/nvidia/
+32/libGL.so.#VERSION#			usr/lib32/nvidia/
 32/libnvidia-glcore.so.#VERSION#	usr/lib32/
-usr/lib32/libnvidia-tls.so.#VERSION#
-usr/lib32/tls/libnvidia-tls.so.#VERSION#
+32/libnvidia-tls.so.#VERSION#		usr/lib32/
+32/tls/libnvidia-tls.so.#VERSION#	usr/lib32/tls/
