--- a/debian/xserver-xorg-video-nvidia.install.in
+++ b/debian/xserver-xorg-video-nvidia.install.in
@@ -1,3 +1,3 @@
-usr/X11R6/lib/modules/drivers/nvidia_drv.so		usr/lib/#PRIVATE#/
-usr/X11R6/lib/modules/extensions/libglx.so.#VERSION#	usr/lib/#PRIVATE#/
-nvidia.ids						usr/share/xserver-xorg/pci/
+nvidia_drv.so		usr/lib/#PRIVATE#/
+libglx.so.#VERSION#	usr/lib/#PRIVATE#/
+nvidia.ids		usr/lib/#PRIVATE#/
