--- a/debian/control
+++ b/debian/control
@@ -40,7 +40,7 @@ Suggests:
  nvidia-kernel${nvidia:Legacy}-dkms (>= ${nvidia:Version})
  | nvidia-kernel${nvidia:Legacy}-source (>= ${nvidia:Version})
 Provides:
- nvidia-glx,
+ nvidia-glx-any,
 Conflicts:
  nvidia-glx,
  nvidia-glx-legacy,
@@ -84,6 +84,7 @@ Suggests:
  nvidia-kernel${nvidia:Legacy}-dkms (>= ${nvidia:Version})
  | nvidia-kernel${nvidia:Legacy}-source (>= ${nvidia:Version})
 Provides:
+ xserver-xorg-video-nvidia-any,
  ${nvidia:xorgProvides},
 Conflicts:
  nvidia-glx-legacy,
@@ -136,7 +137,7 @@ Suggests:
  nvidia-kernel${nvidia:Legacy}-dkms (>= ${nvidia:Version})
  | nvidia-kernel${nvidia:Legacy}-source (>= ${nvidia:Version})
 Provides:
- libgl1-nvidia-glx,
+ libgl1-nvidia-glx-any,
 Conflicts:
  libgl1-nvidia-glx,
  nvidia-glx (<< 195.36.31),
@@ -178,9 +179,9 @@ Suggests:
  nvidia-kernel${nvidia:Legacy}-dkms (>= ${nvidia:Version})
  | nvidia-kernel${nvidia:Legacy}-source (>= ${nvidia:Version})
 Provides:
- libgl1-nvidia-glx-ia32,
+ libgl1-nvidia-glx-ia32-any,
 Conflicts:
- libgl1-nvidia-glx-ia32,
+ libgl1-nvidia-glx-ia32-any,
  fglrx-glx-ia32,
  nvidia-glx-ia32 (<< 195.36.31),
  nvidia-glx-legacy-ia32,
