Update Lintian overrides for multiarch
* Update Lintian overrides for libnvidia-complier and libcuda1 for the
  move to multiarch paths.


git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/275.xx@2214 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/libcuda1.lintian-overrides.in
+++ b/debian/libcuda1.lintian-overrides.in
@@ -1,5 +1,5 @@
 # The NVIDIA license does not allow any form of modification.
-#!amd64#embedded-library usr/lib/libcuda.so.#VERSION#: libm
+#!amd64#embedded-library usr/lib/i386-linux-gnu/libcuda.so.#VERSION#: libm
 shlib-with-executable-stack
 #!amd64#shlib-with-non-pic-code
 unstripped-binary-or-object
