--- a/debian/libnvidia-compiler.lintian-overrides.in
+++ b/debian/libnvidia-compiler.lintian-overrides.in
@@ -1,6 +1,6 @@
 # The NVIDIA license does not allow any form of modification.
 binary-has-unneeded-section
-#!amd64#embedded-library usr/lib/i386-linux-gnu/libnvidia-compiler.so.#VERSION#: libm
+#!amd64#embedded-library #LIBDIR#/libnvidia-compiler.so.#VERSION#: libm
 shlib-with-executable-stack
 #!amd64#shlib-with-non-pic-code
 #!amd64#spelling-error-in-binary
