convert some lintian overrides to 2.5.1 [arch] list format
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/275.xx@2255 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/libcuda1.lintian-overrides.in
+++ b/debian/libcuda1.lintian-overrides.in
@@ -1,7 +1,7 @@
 # The NVIDIA license does not allow any form of modification.
-#!amd64#embedded-library #LIBDIR#/libcuda.so.#VERSION#: libm
+[i386]: embedded-library #LIBDIR#/libcuda.so.#VERSION#: libm
 shlib-with-executable-stack
-#!amd64#shlib-with-non-pic-code
+[i386]: shlib-with-non-pic-code
 unstripped-binary-or-object
 
 # libcudart.so.2 does dlopen("libcuda.so").
