--- a/debian/libcuda1.lintian-overrides.in
+++ b/debian/libcuda1.lintian-overrides.in
@@ -1,7 +1,7 @@
 # The NVIDIA license does not allow any form of modification.
-[i386]: embedded-library #LIBDIR#/libcuda.so.#VERSION#: libm
+#!amd64#embedded-library #LIBDIR#/libcuda.so.#VERSION#: libm
 shlib-with-executable-stack
-[i386]: shlib-with-non-pic-code
+#!amd64#shlib-with-non-pic-code
 unstripped-binary-or-object
 
 # libcudart.so.2 does dlopen("libcuda.so").
