--- a/debian/libgl1-nvidia-glx.lintian-overrides.in
+++ b/debian/libgl1-nvidia-glx.lintian-overrides.in
@@ -1,5 +1,5 @@
 # The NVIDIA license does not allow any form of modification.
-[i386]: shlib-with-non-pic-code
+#!amd64#shlib-with-non-pic-code
 spelling-error-in-binary
 
 # Packages built against the NVIDIA libGL should declare dependencies on
