Run check-for-conflicting-opengl-libraries from libgl1-nvidia*-glx{,-ia32} postinst.
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/275.xx@2262 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -126,6 +126,7 @@ Pre-Depends:
  ${misc:Pre-Depends}
 Depends:
  nvidia-alternative${nvidia:Legacy},
+ nvidia-support,
  ${shlibs:Depends}, ${misc:Depends}
 Recommends:
  nvidia-kernel-${nvidia:Version}${nvidia:Perfkit},
@@ -167,6 +168,7 @@ Pre-Depends:
  ${misc:Pre-Depends}
 Depends:
  libgl1-nvidia-alternatives-ia32,
+ nvidia-support,
  ${shlibs:Depends}, ${misc:Depends}
 Recommends:
  nvidia-kernel-${nvidia:Version}${nvidia:Perfkit},
