Update symbols control files.
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/280.xx@2285 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/libgl1-nvidia-glx.symbols.common.in
+++ b/debian/libgl1-nvidia-glx.symbols.common.in
@@ -82,6 +82,7 @@ libGL.so.1 #PACKAGE# #MINVER#
  glBufferAddressRangeNV@Base 185
  glBufferData@Base 1.0.6106
  glBufferDataARB@Base 1.0.4349
+ glBufferDataSysmem@Base 280
  glBufferSubData@Base 1.0.6106
  glBufferSubDataARB@Base 1.0.4349
  glCallList@Base 1.0.4349
