--- a/debian/libnvidia-compiler.symbols.in
+++ b/debian/libnvidia-compiler.symbols.in
@@ -1,5 +1,5 @@
 libnvidia-compiler.so.#VERSION# #PACKAGE# #MINVER#
  NvCliCompileLogFree@Base 256
  NvCliCompileProgram@Base 256
- NvCliCompileProgram_internal@Base 275
  NvCliCompiledProgramFree@Base 256
+ nvvmCompilerProperty@Base 280
