Add Breaks: nvidia-smi (<< $(nvidia:Version}) to libnvidia-ml1 because the interface is changing frequently but the soname is kept.
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/280.xx@2286 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -542,6 +542,8 @@ Pre-Depends:
  ${misc:Pre-Depends}
 Depends:
  ${shlibs:Depends}, ${misc:Depends}
+Breaks:
+ nvidia-smi (<< ${nvidia:Version}),
 Description: NVIDIA management library (NVML) runtime library
  NVML provides programmatic access to static information and monitoring
  data for NVIDIA GPUs, as well as limited managment capabilities.
