Update lintian overrides.
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/280.xx@2287 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/libnvidia-compiler.lintian-overrides.in
+++ b/debian/libnvidia-compiler.lintian-overrides.in
@@ -3,7 +3,7 @@ binary-has-unneeded-section
 #!amd64#embedded-library #LIBDIR#/libnvidia-compiler.so.#VERSION#: libm
 shlib-with-executable-stack
 #!amd64#shlib-with-non-pic-code
-#!amd64#spelling-error-in-binary
+spelling-error-in-binary
 
 # The libnvidia-compiler.so.* SONAME changes with every upstream release.
 # But it is a (huge) plugin that is only used from other NVIDIA libraries
