--- a/debian/libnvidia-compiler.lintian-overrides.in
+++ b/debian/libnvidia-compiler.lintian-overrides.in
@@ -1,8 +1,8 @@
 # The NVIDIA license does not allow any form of modification.
 binary-has-unneeded-section
-#!amd64#embedded-library #LIBDIR#/libnvidia-compiler.so.#VERSION#: libm
+[i386]: embedded-library #LIBDIR#/libnvidia-compiler.so.#VERSION#: libm
 shlib-with-executable-stack
-#!amd64#shlib-with-non-pic-code
+[i386]: shlib-with-non-pic-code
 spelling-error-in-binary
 
 # The libnvidia-compiler.so.* SONAME changes with every upstream release.
