Work around autoreject by ftp-master which is still running lintian 2.5.0.
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/280.xx@2291 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/libnvidia-compiler.lintian-overrides.in
+++ b/debian/libnvidia-compiler.lintian-overrides.in
@@ -4,6 +4,8 @@ binary-has-unneeded-section
 shlib-with-executable-stack
 [i386]: shlib-with-non-pic-code
 spelling-error-in-binary
+# Fallback for lintian 2.5.0 which is still being used on ftp-master.
+embedded-library #LIBDIR#/libnvidia-compiler.so.#VERSION#: libm
 
 # The libnvidia-compiler.so.* SONAME changes with every upstream release.
 # But it is a (huge) plugin that is only used from other NVIDIA libraries
