Convert lintian-overrides to use [arch lists] introduced in lintian 2.5.1.
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@2318 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/libgl1-nvidia-glx.lintian-overrides.in
+++ b/debian/libgl1-nvidia-glx.lintian-overrides.in
@@ -1,9 +1,9 @@
 # The NVIDIA license does not allow any form of modification.
 binary-has-unneeded-section
 shared-lib-without-dependency-information
-#!i386#shlib-with-executable-stack
-#!amd64#shlib-with-non-pic-code
-#!amd64#shlib-without-PT_GNU_STACK-section
+[amd64]: shlib-with-executable-stack
+[i386]: shlib-with-non-pic-code
+[i386]: shlib-without-PT_GNU_STACK-section
 spelling-error-in-binary
 
 # Packages built against the NVIDIA libGL should declare dependencies on
