Fall back to the old version of nvidia.ids if extract-pci-ids.sh failed.
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@2321 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/rules
+++ b/debian/rules
@@ -85,6 +85,7 @@ unpack-stamp: ${filename_x86} ${filename_x86_64}
 nv-kernel.ids: unpack-stamp
 	sh debian/extract-pci-ids.sh NVIDIA-Linux/usr/src/nv/nv-kernel.o \
 		| tr a-f A-F | sort -u > $@
+	test -s $@ || cp debian/$@ $@
 	@set -e -x ; \
 	if ! cmp -s debian/nv-kernel.ids nv-kernel.ids ; then \
 		diff -u debian/nv-kernel.ids nv-kernel.ids || true ; \
