--- a/debian/control
+++ b/debian/control
@@ -99,6 +99,7 @@ Conflicts:
  nvidia-glx-legacy-173xx,
  libgl1-nvidia${nvidia:Legacy}-dev,
  nvidia-glx${nvidia:Legacy}-dev,
+ libgl1-nvidia-glx-ia32 [i386],
 Breaks:
  libgl1-nvidia${nvidia:Legacy}-glx-ia32 (<< ${nvidia:Version}) [amd64],
 Replaces:
@@ -252,6 +253,7 @@ Conflicts:
  nvidia-libvdpau-dev,
  nvidia-libvdpau1,
  nvidia-libvdpau1-driver,
+ nvidia-vdpau-driver-ia32 [i386],
 Breaks:
  libvdpau1 (<< 0.4),
  nvidia-glx (<< 180.51),
@@ -352,6 +354,7 @@ Suggests:
  | nvidia-kernel${nvidia:Legacy}-source (>= ${nvidia:Version})
 Conflicts:
  libcuda1-dev,
+ libcuda1-ia32 [i386],
 Replaces:
  nvidia-glx (<< 185.18.14-2),
  nvidia-glx-dev (<< 185.18.14-2),
@@ -412,6 +415,7 @@ Depends:
  ${shlibs:Depends}, ${misc:Depends}
 Conflicts:
  libnvidia-compiler1,
+ libnvidia-compiler-ia32 [i386],
 Replaces:
  libnvidia-compiler1,
 Description: NVIDIA runtime compiler library
@@ -465,6 +469,8 @@ Depends:
  ${misc:Depends}
 Enhances:
  libopencl1,
+Conflicts:
+ nvidia-opencl-icd-ia32 [i386],
 Provides:
  opencl-icd,
 Description: NVIDIA OpenCL ICD
@@ -507,6 +513,7 @@ Provides:
  libopencl1,
 Conflicts:
  nvidia-libopencl1-dev,
+ nvidia-libopencl1-ia32 [i386],
 Replaces:
  nvidia-libopencl1-dev,
 Description: NVIDIA OpenCL library
