--- a/debian/rules
+++ b/debian/rules
@@ -36,7 +36,7 @@ RENAMED_CONTROL	 = $(patsubst debian/nvidia-glx%,debian/nvidia-glx$(legacy)%,\
 			$(patsubst debian/libgl1-nvidia%,debian/libgl1-nvidia$(legacy)%,\
 			$(patsubst debian/nvidia-kernel%,debian/nvidia-kernel$(legacy)%,\
 				$(RENAME_CONTROL))))
-IA32_OVERRIDES	 = nvidia-vdpau-driver libcuda1 libnvidia-compiler nvidia-libopencl1
+IA32_OVERRIDES	 = nvidia-vdpau-driver libcuda1 nvidia-libopencl1
 GEN_IA32_OVERRIDES := $(foreach p,$(IA32_OVERRIDES),$(if $(wildcard debian/$p.lintian-overrides*),$p))
 TEMPLATES	:= $(wildcard debian/*.in debian/module/debian/*.in)
 AUTOGEN		+= $(patsubst %.in,%,$(TEMPLATES))
@@ -255,7 +255,7 @@ override_dh_strip:
 	< $< > $@
 
 %-ia32.lintian-overrides: %.lintian-overrides
-	sed -r -e '/^\[amd64\]: /d; s/^\[i386\]: //; s%usr/lib%usr/lib32%g' $< > $@
+	sed -r -e '/^\[amd64\]: /d; s/^\[i386\]: //; s%$(libdir)%usr/lib32%g' $< > $@
 
 debian/module/debian/changelog: debian/changelog
 	sed '1s/^nvidia-graphics-drivers/nvidia-kernel/g' $< > $@
