update formatting of lintian overrides
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/256.xx-experimental@2339 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/libcuda1.lintian-overrides.in
+++ b/debian/libcuda1.lintian-overrides.in
@@ -1,6 +1,6 @@
 # The NVIDIA license does not allow any form of modification.
-#!amd64#libcuda1: embedded-library usr/lib/libcuda.so.#VERSION#: libm
-libcuda1: shlib-with-executable-stack
+[i386]: embedded-library usr/lib/libcuda.so.#VERSION#: libm
+shlib-with-executable-stack
 [i386]: shlib-with-non-pic-code
 unstripped-binary-or-object
 
