--- a/debian/libnvidia-compiler.lintian-overrides.in
+++ b/debian/libnvidia-compiler.lintian-overrides.in
@@ -1,8 +1,8 @@
 # The NVIDIA license does not allow any form of modification.
-libnvidia-compiler: binary-has-unneeded-section
-#!amd64#libnvidia-compiler: embedded-library usr/lib/libnvidia-compiler.so.#VERSION#: libm
-libnvidia-compiler: shlib-with-executable-stack
-#!amd64#libnvidia-compiler: shlib-with-non-pic-code
+binary-has-unneeded-section
+[i386]: embedded-library usr/lib/libnvidia-compiler.so.#VERSION#: libm
+shlib-with-executable-stack
+[i386]: shlib-with-non-pic-code
 [i386]: spelling-error-in-binary
 
 # The libnvidia-compiler.so.* SONAME changes with every upstream release.
@@ -10,4 +10,4 @@ libnvidia-compiler: shlib-with-executable-stack
 # with the same upstream version (and a constant SONAME), so don't include
 # the SONAME in the package name to avoid going through NEW with every new
 # upstream release.
-libnvidia-compiler: package-name-doesnt-match-sonames
+package-name-doesnt-match-sonames
