--- a/debian/nvidia-libopencl1.lintian-overrides.in
+++ b/debian/nvidia-libopencl1.lintian-overrides.in
@@ -1,5 +1,5 @@
 # The NVIDIA license does not allow any form of modification.
-nvidia-libopencl1: shlib-with-executable-stack
+shlib-with-executable-stack
 [i386]: shlib-with-non-pic-code
 
 # A single symbolic link does not justify the creation of a new package.
