--- a/debian/control
+++ b/debian/control
@@ -27,11 +27,10 @@ Pre-Depends:
  nvidia-installer-cleanup,
 Depends:
  libgl1-nvidia${nvidia:Legacy}-glx (= ${binary:Version}),
- libglx-nvidia-alternatives,
- nvidia-alternative${nvidia:Legacy},
+ xserver-xorg-video-nvidia${nvidia:Legacy} (= ${binary:Version}),
+ nvidia-alternative${nvidia:Legacy} (= ${binary:Version}),
  nvidia-kernel-${nvidia:Version}${nvidia:Perfkit},
  nvidia-support,
- ${nvidia:xorgDepends},
  ${shlibs:Depends}, ${misc:Depends}
 Recommends:
  nvidia-vdpau-driver (>= ${nvidia:Version}),
@@ -41,7 +40,6 @@ Suggests:
  | nvidia-kernel${nvidia:Legacy}-source (>= ${nvidia:Version})
 Provides:
  nvidia-glx,
- ${nvidia:xorgProvides},
 Conflicts:
  nvidia-glx,
  nvidia-glx-legacy,
@@ -51,6 +49,48 @@ Conflicts:
  fglrx-driver,
 Breaks:
  libgl1-nvidia${nvidia:Legacy}-glx-ia32 (<< ${nvidia:Version}) [amd64],
+Description: NVIDIA metapackage${nvidia:LegacyDesc}
+ This metapackage depends on the NVIDIA binary driver and libraries
+ that provide optimized hardware acceleration of
+ OpenGL applications via a direct-rendering X Server.
+ AGP, PCIe, SLI, TV-out and flat panel displays are also supported.
+ .
+ Please see the nvidia-kernel${nvidia:Legacy}-dkms or
+ nvidia-kernel${nvidia:Legacy}-source packages
+ for building the kernel module required by this package.
+ This will provide nvidia-kernel-${nvidia:Version}${nvidia:Perfkit}.
+ .
+ ${nvidia:Models}
+ .
+ See /usr/share/doc/nvidia-glx${nvidia:Legacy}/README.txt.gz
+ for a complete list of supported GPUs and PCI IDs.
+
+Package: xserver-xorg-video-nvidia
+Section: non-free/x11
+Architecture: i386 amd64
+Pre-Depends:
+ dpkg (>= 1.15.7.2),
+ nvidia-installer-cleanup,
+Depends:
+ libgl1-nvidia${nvidia:Legacy}-glx (= ${binary:Version}),
+ nvidia-alternative${nvidia:Legacy} (= ${binary:Version}),
+ ${nvidia:xorgDepends},
+ ${shlibs:Depends}, ${misc:Depends}
+Recommends:
+ nvidia-vdpau-driver (>= ${nvidia:Version}),
+ nvidia-kernel-${nvidia:Version}${nvidia:Perfkit},
+Suggests:
+ nvidia-settings,
+ nvidia-kernel${nvidia:Legacy}-dkms (>= ${nvidia:Version})
+ | nvidia-kernel${nvidia:Legacy}-source (>= ${nvidia:Version})
+Provides:
+ ${nvidia:xorgProvides},
+Conflicts:
+ nvidia-glx-legacy,
+ nvidia-glx-legacy-71xx,
+ nvidia-glx-legacy-96xx,
+ nvidia-glx-legacy-173xx,
+ fglrx-driver,
 Description: NVIDIA binary Xorg driver${nvidia:LegacyDesc}
  These binary drivers provide optimized hardware acceleration of
  OpenGL applications via a direct-rendering X Server.
