Install the following files that exist in both current and legacy drivers into a version specific directory /usr/lib/nvidia/{current,legacy-*}: libGL.so.1, libglx.so, nvidia_drv.so, libnvidia-cfg.so.1, libXvMCNVIDIA.so.1, libXvMCNVIDIA_dynamic.so.1, nvidia-bug-report.sh.
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@2349 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/libgl1-nvidia-glx.install.in
+++ b/debian/libgl1-nvidia-glx.install.in
@@ -1,6 +1,6 @@
-usr/lib/libGL.so.#VERSION#				usr/lib/nvidia/
+usr/lib/libGL.so.#VERSION#			usr/lib/#PRIVATE#/
 usr/lib/libGLcore.so.#VERSION#
-usr/lib/libnvidia-cfg.so.#VERSION#
+usr/lib/libnvidia-cfg.so.#VERSION#		usr/lib/#PRIVATE#/
 usr/lib/libnvidia-tls.so.#VERSION#
 usr/lib/tls/libnvidia-tls.so.#VERSION#
-usr/X11R6/lib/libXvMCNVIDIA.so.#VERSION#		usr/lib/
+usr/X11R6/lib/libXvMCNVIDIA.so.#VERSION#	usr/lib/#PRIVATE#/
