--- a/debian/control
+++ b/debian/control
@@ -38,7 +38,7 @@ Suggests:
  nvidia-kernel${nvidia:Legacy}-dkms (>= ${nvidia:Version})
  | nvidia-kernel${nvidia:Legacy}-source (>= ${nvidia:Version})
 Provides:
- nvidia-glx,
+ nvidia-glx-any,
 Breaks:
  libgl1-nvidia${nvidia:Legacy}-glx-ia32 (<< ${nvidia:Version}) [amd64],
  nvidia-glx-legacy (<< 71.86.14-3),
@@ -80,6 +80,7 @@ Suggests:
  nvidia-kernel${nvidia:Legacy}-dkms (>= ${nvidia:Version})
  | nvidia-kernel${nvidia:Legacy}-source (>= ${nvidia:Version})
 Provides:
+ xserver-xorg-video-nvidia-any,
  ${nvidia:xorgProvides},
 Breaks:
  nvidia-glx (<< 275.09.07-2),
@@ -130,7 +131,7 @@ Suggests:
  nvidia-kernel${nvidia:Legacy}-dkms (>= ${nvidia:Version})
  | nvidia-kernel${nvidia:Legacy}-source (>= ${nvidia:Version})
 Provides:
- libgl1-nvidia-glx,
+ libgl1-nvidia-glx-any,
 Conflicts:
  libgl1-nvidia${nvidia:Legacy}-dev,
  nvidia-glx${nvidia:Legacy}-dev,
@@ -171,9 +172,9 @@ Suggests:
  nvidia-kernel${nvidia:Legacy}-dkms (>= ${nvidia:Version})
  | nvidia-kernel${nvidia:Legacy}-source (>= ${nvidia:Version})
 Provides:
- libgl1-nvidia-glx-ia32,
+ libgl1-nvidia-glx-ia32-any,
 Conflicts:
- libgl1-nvidia-glx-ia32,
+ libgl1-nvidia-glx-ia32-any,
  fglrx-glx-ia32,
  nvidia-glx-ia32 (<< 195.36.31),
  nvidia-glx-legacy-ia32,
