--- a/debian/bug-control.in
+++ b/debian/bug-control.in
@@ -1,3 +1,3 @@
-report-with: nvidia-glx#LEGACY# nvidia-kernel#LEGACY#-dkms nvidia-kernel#LEGACY#-source
+report-with: nvidia-glx#LEGACY# libgl1-nvidia#LEGACY#-glx xserver-xorg-video-nvidia#LEGACY# nvidia-alternative#LEGACY# nvidia-kernel#LEGACY#-dkms nvidia-kernel#LEGACY#-source glx-alternative-nvidia
 
 package-status: nvidia-glx#LEGACY# nvidia-kernel#LEGACY#-dkms nvidia-kernel#LEGACY#-source nvidia-kernel-common xserver-xorg xserver-xorg-core linux-headers-2.6
