--- a/debian/rules
+++ b/debian/rules
@@ -76,11 +76,17 @@ unpack-stamp: ${filename_x86} ${filename_x86_64}
 	test -f NVIDIA-Linux/README.txt || \
 		mv NVIDIA-Linux/usr/share/doc/README.txt NVIDIA-Linux/README.txt 2>/dev/null || \
 		mv NVIDIA-Linux/usr/share/doc/README NVIDIA-Linux/README.txt
+	test -f NVIDIA-Linux/NVIDIA_Changelog || \
+		mv NVIDIA-Linux/usr/share/doc/NVIDIA_Changelog NVIDIA-Linux/
+	test -d NVIDIA-Linux-i386/kernel || \
+		mv NVIDIA-Linux-i386/usr/src/nv NVIDIA-Linux-i386/kernel
+	test -d NVIDIA-Linux-amd64/kernel || \
+		mv NVIDIA-Linux-amd64/usr/src/nv NVIDIA-Linux-amd64/kernel
 	ls -al
 	touch $@
 
 nv-kernel.ids: unpack-stamp
-	sh debian/extract-pci-ids.sh NVIDIA-Linux/usr/src/nv/nv-kernel.o \
+	sh debian/extract-pci-ids.sh NVIDIA-Linux/kernel/nv-kernel.o \
 		| tr a-f A-F | sort -u > $@
 	test -s $@ || cp debian/$@ $@
 	@set -e -x ; \
@@ -146,10 +152,10 @@ install-into-tmp:
 build-kernel-source-tree: install-into-tmp
 	# Build the nvidia-kernel-source tree.
 	mkdir -p $(module_source)
-	mv debian/tmp/usr/src/nv/* $(module_source)/
+	mv debian/tmp/kernel/* $(module_source)/
 	# This copy of the changelog is going to be installed into the module
 	# binary packages.
-	cp -a debian/tmp/usr/share/doc/NVIDIA_Changelog $(module_source)/
+	cp -a debian/tmp/NVIDIA_Changelog $(module_source)/
 
 	# We don't want these makefiles that don't work with kbuild.
 	rm $(module_source)/makefile
@@ -158,9 +164,9 @@ build-kernel-source-tree: install-into-tmp
 	# We want both 32 and 64 bit versions of nv-kernel.o.  Do not use a
 	# name matching *.o to prevent accidental deletion by some clean
 	# target.
-	cp -a NVIDIA-Linux-i386/usr/src/nv/nv-kernel.o \
+	cp -a NVIDIA-Linux-i386/kernel/nv-kernel.o \
 	    $(module_source)/nv-kernel.o.i386
-	cp -a NVIDIA-Linux-amd64/usr/src/nv/nv-kernel.o \
+	cp -a NVIDIA-Linux-amd64/kernel/nv-kernel.o \
 	    $(module_source)/nv-kernel.o.x86_64
 	rm -f $(module_source)/nv-kernel.o
 
@@ -204,7 +210,7 @@ override_dh_install:
 	dh_install --list-missing
 
 override_dh_installchangelogs:
-	dh_installchangelogs debian/tmp/usr/share/doc/NVIDIA_Changelog
+	dh_installchangelogs debian/tmp/NVIDIA_Changelog
 
 override_dh_bugfiles:
 	dh_bugfiles -A
