put libnvidia-tls.so.1, tls/libnvidia-tls.so.1 and libGLcore.so.1 into the private directory, too
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@2365 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/libgl1-nvidia-glx.install.in
+++ b/debian/libgl1-nvidia-glx.install.in
@@ -1,6 +1,6 @@
 usr/lib/libGL.so.#VERSION#			#LIBDIR#/#PRIVATE#/
-usr/lib/libGLcore.so.#VERSION#			#LIBDIR#/
+usr/lib/libGLcore.so.#VERSION#			#LIBDIR#/#PRIVATE#/
 usr/lib/libnvidia-cfg.so.#VERSION#		#LIBDIR#/#PRIVATE#/
-usr/lib/libnvidia-tls.so.#VERSION#		#LIBDIR#/
-usr/lib/tls/libnvidia-tls.so.#VERSION#		#LIBDIR#/tls/
+usr/lib/libnvidia-tls.so.#VERSION#		#LIBDIR#/#PRIVATE#/
+usr/lib/tls/libnvidia-tls.so.#VERSION#		#LIBDIR#/#PRIVATE#/tls/
 usr/X11R6/lib/libXvMCNVIDIA.so.#VERSION#	#LIBDIR#/#PRIVATE#/
