--- a/debian/libgl1-nvidia-glx.links.in
+++ b/debian/libgl1-nvidia-glx.links.in
@@ -1,7 +1,7 @@
 #LIBDIR#/#PRIVATE#/libGL.so.#VERSION#			#LIBDIR#/#PRIVATE#/libGL.so.1
-#LIBDIR#/libGLcore.so.#VERSION#				#LIBDIR#/libGLcore.so.1
+#LIBDIR#/#PRIVATE#/libGLcore.so.#VERSION#		#LIBDIR#/#PRIVATE#/libGLcore.so.1
 #LIBDIR#/#PRIVATE#/libnvidia-cfg.so.#VERSION#		#LIBDIR#/#PRIVATE#/libnvidia-cfg.so.1
-#LIBDIR#/libnvidia-tls.so.#VERSION#			#LIBDIR#/libnvidia-tls.so.1
-#LIBDIR#/tls/libnvidia-tls.so.#VERSION#			#LIBDIR#/tls/libnvidia-tls.so.1
+#LIBDIR#/#PRIVATE#/libnvidia-tls.so.#VERSION#		#LIBDIR#/#PRIVATE#/libnvidia-tls.so.1
+#LIBDIR#/#PRIVATE#/tls/libnvidia-tls.so.#VERSION#	#LIBDIR#/#PRIVATE#/tls/libnvidia-tls.so.1
 #LIBDIR#/#PRIVATE#/libXvMCNVIDIA.so.#VERSION#		#LIBDIR#/#PRIVATE#/libXvMCNVIDIA.so.1
 #LIBDIR#/#PRIVATE#/libXvMCNVIDIA.so.#VERSION#		#LIBDIR#/#PRIVATE#/libXvMCNVIDIA_dynamic.so.1
