improve bug reporting
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@2375 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/nvidia-vdpau-driver.links.in
+++ b/debian/nvidia-vdpau-driver.links.in
@@ -1,2 +1,3 @@
+# work around missing multiarch support in libvdpau1
 #LIBDIR#/vdpau/libvdpau_nvidia.so.1		usr/lib/vdpau/libvdpau_nvidia.so.1
 #LIBDIR#/vdpau/libvdpau_nvidia.so.#VERSION#	#LIBDIR#/vdpau/libvdpau_nvidia.so.1
