Add dependency on libgl{1,x}-nvidia-alternatives to nvidia-alternative to ensure the old packages are not removed prematurely.
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@2389 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -195,6 +195,8 @@ Architecture: i386 amd64
 Multi-Arch: foreign
 Depends:
  glx-alternative-nvidia (>= 0.1.90),
+ libgl1-nvidia-alternatives,
+ libglx-nvidia-alternatives,
  ${misc:Depends}
 Breaks:
  nvidia-glx${nvidia:Legacy} (<< 275.09.07-2),
@@ -614,8 +616,6 @@ Description: NVIDIA OpenCL 32-bit library
 Package: libgl1-nvidia-alternatives
 Section: non-free/oldlibs
 Architecture: i386 amd64
-Pre-Depends:
- glx-diversions,
 Depends:
  glx-alternative-mesa,
  glx-alternative-nvidia,
@@ -665,8 +665,6 @@ Description: simplifies replacing MESA libGL with GPU vendor libraries (32-bit)
 Package: libglx-nvidia-alternatives
 Section: non-free/oldlibs
 Architecture: i386 amd64
-Pre-Depends:
- glx-diversions,
 Depends:
  glx-alternative-mesa,
  glx-alternative-nvidia,
